[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/interface/main_menu/SA-title.jpg" type="Texture" id=1]
[ext_resource path="res://assets/interface/main_menu/SA-meteor.jpg" type="Texture" id=3]
[ext_resource path="res://assets/interface/main_menu/background.png" type="Texture" id=6]
[ext_resource path="res://scenes/menu/mainMenu/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://scenes/level/forest/Forest.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/audio/music/menu/main/little town - orchestral.ogg" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 9 )

[node name="Main" type="Node"]
script = ExtResource( 7 )
scn_game = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 200.0
margin_right = 325.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 4 )
text = "New Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 270.0
margin_right = 294.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 2 )
text = "Continue"
flat = true

[node name="LoadGame" type="Button" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 340.0
margin_right = 349.0
margin_bottom = 401.0
custom_fonts/font = SubResource( 1 )
text = "Load Game"
flat = true
align = 0

[node name="Options" type="Button" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 410.0
margin_right = 265.0
margin_bottom = 471.0
custom_fonts/font = SubResource( 3 )
text = "Options"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 480.0
margin_right = 157.0
margin_bottom = 541.0
custom_fonts/font = SubResource( 3 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -268.5
margin_right = 268.5
margin_bottom = 145.0
texture = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Characters" type="TextureRect" parent="CanvasLayer"]
margin_left = 401.063
margin_top = 207.65
margin_right = 789.063
margin_bottom = 568.65
texture = ExtResource( 3 )
expand = true

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
autoplay = true
[connection signal="pressed" from="CanvasLayer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CanvasLayer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CanvasLayer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_Exit_pressed"]
